Version 5.2.0
	- Added ClearPool and ClearAllPools features
	
Version 5.1.3 - 9/19/2007
  - Fixed problem with using a stored procedure that takes a parameter as a select routine
    for a TableAdapter wizard. (Bug #29098)
  - Fixed problem with creating users using hashed passwords when machineKey is set
    to AutoGenerate.  We now correctly throw an exception if you are requesting
    encrypted passwords but it works ok for hashed passwords. (Bug #29235)
  - Fixed problem with selecting users for roles in the web admin tool.  The problem was that
    we had a simple syntax error in our database lookup code. (Bug #29236)
  - Added AutoEnlist connection string option.  Setting it to false will prevent the connection
    from automatically enlisting in any current transaction    
  - Changed membership schema to allow null values for email.  This allows all the 
    overrides for Membership.CreateUser to work.    
  - Added 'Respect Binary Flags' connection string option to allow existing applications
    to select the old behavior of not always respecting the binary flags of a columns.
  - Added ability to use blobs to store true UTF-8 data (see help)
  - Help is now integrated into Visual Studio 2005 and includes content other than the API 
  - Fixed problem reported by user where MySqlMembershipProvider.GetUser was attempting to 
    reuse the connection to update a table while a reader was open on it.    
  - Fixed problem with membership schema where the password key column was not large enough  
  - Added feature where bit columns that have the value 0 or 1 are returned as bool
  - Added Foreign Key Columns metadata collection
  - Reworked how foreign key metadata is collected to make it more robust and faster
  - Changed DDEX provider to use the core providers schema routines for 
    foreign keys and foreign key columns
  - Fixed index and foreign key enumerators inside the DDEX provider to work
    with the new binary respect behavior of 5.1