@@ -1,6 +1,9 @@
 Version 5.2.0
-	- Added ClearPool and ClearAllPools features
-	
+* Added ClearPool and ClearAllPools features
+* DDEX provider now works under Visual Studio 2008 beta 2	
+* Added support for DbDataAdapter UpdateBatchSize.  Batching is fully supported
+  including collapsing inserts down into the multi-value form if possible.
+
 Version 5.1.3 - 9/19/2007
   - Fixed problem with using a stored procedure that takes a parameter as a select routine
     for a TableAdapter wizard. (Bug #29098)
